[gd_scene load_steps=5 format=3 uid="uid://cewmytpryp11q"]

[ext_resource type="Texture2D" uid="uid://bkh55f8mv33gc" path="res://assets/level_panel.png" id="1_boxae"]
[ext_resource type="Script" path="res://scripts/game_over_screen.gd" id="1_mjjqd"]
[ext_resource type="FontFile" uid="uid://b80otsvakf36r" path="res://assets/monogram-extended.ttf" id="2_bwyqd"]
[ext_resource type="PackedScene" uid="uid://126k4nwmx6ib" path="res://scene/stars.tscn" id="4_7abxa"]

[node name="game_over_screen" type="CanvasLayer"]
layer = 5
script = ExtResource("1_mjjqd")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NinePatchRect" type="NinePatchRect" parent="CenterContainer"]
custom_minimum_size = Vector2(350, 250)
layout_mode = 2
texture = ExtResource("1_boxae")
patch_margin_left = 6
patch_margin_top = 2
patch_margin_right = 28
patch_margin_bottom = 30

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/NinePatchRect/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/NinePatchRect/MarginContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="title" type="Label" parent="CenterContainer/NinePatchRect/MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.101961, 0.392157, 0.305882, 1)
theme_override_fonts/font = ExtResource("2_bwyqd")
theme_override_font_sizes/font_size = 60
text = "GAME OVER"

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/NinePatchRect/MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/NinePatchRect/MarginContainer/CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 10
alignment = 1

[node name="score_label" type="Label" parent="CenterContainer/NinePatchRect/MarginContainer/CenterContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.101961, 0.392157, 0.305882, 1)
theme_override_fonts/font = ExtResource("2_bwyqd")
theme_override_font_sizes/font_size = 50
text = "SCORE"

[node name="stars2" parent="CenterContainer/NinePatchRect/MarginContainer/CenterContainer/VBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource("4_7abxa")]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/NinePatchRect/MarginContainer/CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/NinePatchRect/MarginContainer/CenterContainer/VBoxContainer/VBoxContainer/CenterContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="CenterContainer/NinePatchRect/MarginContainer/CenterContainer/VBoxContainer/VBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Replay"

[node name="Button2" type="Button" parent="CenterContainer/NinePatchRect/MarginContainer/CenterContainer/VBoxContainer/VBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Next Level"

[connection signal="pressed" from="CenterContainer/NinePatchRect/MarginContainer/CenterContainer/VBoxContainer/VBoxContainer/CenterContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CenterContainer/NinePatchRect/MarginContainer/CenterContainer/VBoxContainer/VBoxContainer/CenterContainer/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
